# src/dtos/offer.dto.ts
@@ -1,0 +1,24 @@
+import { IsEmail, IsNotEmpty, IsString, IsLowercase, IsDateString, IsArray, IsNumber } from "class-validator";
+import { ApiProperty } from "@nestjs/swagger";
+
+export class CreateOfferDto{
+  @ApiProperty()
+  @IsNotEmpty()
+  @IsNumber()
+  agreementId: number;
+
+  @ApiProperty()
+  @IsNotEmpty()
+  @IsArray()
+  skills: string[];
+
+  @ApiProperty()
+  @IsNotEmpty()
+  @IsString()
+  experienceLevel: string;
+
+  @ApiProperty()
+  @IsNotEmpty()
+  @IsString()
+  salary: string;
+}
